--- a/chatbot-ui/src/App.css
+++ b/chatbot-ui/src/App.css
@@ -36,3 +36,26 @@
     transform: rotate(360deg);
   }
 }
+
+
+.grid{
+  display:grid;
+  grid-template-columns: repeat(var(--cols,7), 35px);
+  grid-template-rows: repeat(var(--rows,10), 35px);
+  gap : 5px;
+  user-select: none;
+}
+
+.box{
+  width:fit-content;
+  height:fit-content;
+  border: 1px solid black;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  color: rgb(72, 72, 72);
+
+}
+.selected{
+  background-color: lightblue;
+}
